# hackathon-int20h

./: .gitignore  README.md
api/: python.txt
data/geo/: Cities.json  State.json
data/taxes/: pub718.csv
fastapi/: pyproject.toml
fastapi/app/: csv_util.py  db.py  ddl.sql  init_db.py  main.py  schemas.py
fastapi/app/Services/: import_csv_service.py  process_order_service.py
fastapi/app/schemas/: request_models.py  response_models.py
fastapi/app/services/: orders.py  tax_client.py
fastapi/app/static/: index.html
fastapi/app/static/assets/: index-5HaX7pQi.js  index-C4fSsqa_.js  index-ChCwCJP0.css  index-Cyk1nBMD.js  index-uH5BCRgF.js
fastapi/app/utils/: csv_util.py
frontend/: frontend.txt  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: OrderForm.tsx  OrdersTable.tsx  SkeletonRow.tsx
frontend/src/styles/: OrderForm.scss  _variables.scss  main.scss
frontend/src/types/: index.ts
tax-service/: Cargo.toml
tax-service/examples/: json_parse.rs
tax-service/src/: geo.rs  geometry.rs  lib.rs  main.rs  tax.rs
