[project]
name = "fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "rodionshapoval",email = "r.shapoval@ukma.edu.ua"}
]
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
