[package]
name = "tax-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = {version = "1.49", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.10"
sqlx = {version = "0.8", features=["runtime-tokio", "postgres", "tls-rustls"]}
dotenvy = "0.15"